--- a/front-end-nextjs/Dockerfile
+++ b/front-end-nextjs/Dockerfile
@@ -1,8 +1,12 @@
 FROM node:18-alpine AS base 
 
+# Set the working directory inside the container
 WORKDIR /app 
 
+# Copy lock files for dependency management
 COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
+
+# Install dependencies based on the lockfile available
 RUN \
  if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
  elif [ -f package-lock.json ]; then npm ci; \
@@ -10,10 +14,14 @@ RUN \
  else echo "Lockfile not found." && exit 1; \
  fi
 
+ # Copy all project files to the working directory
 COPY . . 
 
+# Build the application
 RUN npm run build
 
+# Expose port 3000 for the application
 EXPOSE 3000
 
+# Define the command to run the application
 CMD ["npm", "start"]
